--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="value">R$ 250,00</string>
     <string name="origin">Carrefour</string>
+    <string name="releases">Lançamentos</string>
 </resources>
