--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="value">R$ 250,00</string>
     <string name="origin">Carrefour</string>
     <string name="releases">Lançamentos</string>
+    <string name="category">Super Mercado</string>
 </resources>
